@@ -8,6 +8,7 @@ Version 6.2.2 - not yet released
   - fix malformed F records in IGC files
   - minor fix for FLARM stealth calculations
   - fix auto QNH formula
+  - fix reach/route arrival calculations with strong wind
 * user interface
   - fixed several minor bugs in the plane database dialog
   - fix MacCready steps for knots and ft/min
